Fixed nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -298,7 +298,7 @@ button[type=button] > a {
         float: left;
         width: 27%;
         margin: 0 1.7%;
-        padding: 25px 2%;
+        padding: 16px 2%;
         margin-bottom: 0;
     }
 
@@ -354,12 +354,15 @@ button[type=button] > a {
 
     .title {
         float: left;
-        margin-bottom: 0;
     }
 
     nav {
         float: right;
         width: 38%;
+    }
+
+    nav a {
+        padding: 34px 2%;
     }
 
 /* ============
